--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -57,7 +57,7 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="500" height="750"><br><br>
 	
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi (per la precisione, si tratta dell’ultimo, pubblicato postumo):<br> 
-Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
+<i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Impresa.jpg" width="500" height="750"><br><br>
 	
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
