--- a/Barozzi.html
+++ b/Barozzi.html
@@ -43,6 +43,17 @@ Alcune delle imprese architettoniche del nostro personaggio videro la collaboraz
 Barozzi si procurò fama d’insigne trattatista a livello internazionale grazie ai seguenti libri: <i>Regola delli cinque ordini d’architettura</i> (1562), ove viene delineato il concetto di ordine architettonico; <i>Due Regole della prospettiva pratica</i> (1583, postumo, a cura del celebre scienziato ed ecclesiastico Egnazio Danti [1536-1586]). Nel corso del tempo, entrambe le opere furono ristampate parecchie volte e la <i>Regola</i> arrivò a contare anche diverse edizioni in lingua straniera.<br>
 <i>Il Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne inumato nel Pantheon; ora non è più presente l’indicazione del punto esatto della sepoltura.<br>
 Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Primaria e una via del centro storico.</big></p><br><br><br>
+
+<h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
+<p><big>ADORNI, Bruno: <i>Jacopo Barozzi da Vignola</i>, Milano, Skira, 2008.</big></p>
+
+<p><big>BOTTARI, Stefano: <i>Barozzi, Iacopo, detto il Vignola</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. VI, Roma, Istituto della Enciclopedia Italiana, 1964, pp. 502-508.<br>
+Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/barozzi-iacopo-detto-il-vignola_(Dizionario-Biografico)/">Treccani</a>, senza paginazione.</big></p>
+
+<p><big>DAMERI, Debora - LODOVISI, Achille - TRENTI, Giuseppe: <i>Il Conte, l’Architetto e il Palazzo. Il Palazzo di Hercole il vecchio. Secolo XIV</i>, s.l. [ma: Vignola (MO)], Fondazione di Vignola - Centro di documentazione {s.l., Tipografia Silvestri}, 2002, pp. 51-64 (ossia l’intero capitolo <i>I Barozzi e Vignola</i>).</big></p>
+
+<p><big>TUTTLE, Richard James - ADORNI, Bruno - FROMMEL Christoph Luitpold - THOENES Christof (a cura di): <i>Jacopo Barozzi da Vignola</i>, Catalogo della Mostra <i>Jacopo Barozzi da Vignola. La vita e le opere</i> (Vignola [MO], Palazzo Contrari Boncompagni, 30 marzo - 7 luglio 2002), Milano, Electa, 2002 (II edizione, 2003; III edizione, 2007).</big></p><br><br><br>
+
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Antonio Locatelli (1786-1848), ritratto postumo di Giacomo Barozzi, incisione, a partire da una stampa antica.<br> Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi<br> librajo, 1839. Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Locatelli apre la dispensa su Barozzi,<br> il cui testo scritto è firmato in calce da Francesco Selmi.</center></big></big><br>
 <img src="img/celebri vignolesi/Barozzi/Barozzi incisione.jpg" width="430" height="750"></p><br>
