--- a/Cantelli.html
+++ b/Cantelli.html
@@ -51,9 +51,8 @@ Questo volume contiene i seguenti materiali scientifici: Franco FARINELLI, <i>In
 
 <p><big>FEDERZONI, Laura: <i>Giacomo Cantelli: la formazione e l’attività di un cartografo del XVII secolo</i>, «Bollettino della Società geografica italiana», vol. X (1993), fasc. 4, pp. 539-554.</big></p>
 
-<p><big>PALAGIANO, Cosimo: <i>Cantelli, Giacomo, in Dizionario Biografico degli Italiani, vol. XVIII, Roma, Istituto della Enciclopedia Italiana, 1975, pp. 246-247.<br>
-Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/giacomo-cantelli_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
-	
+<p><big>PALAGIANO, Cosimo: <i>Cantelli, Giacomo</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. XVIII, Roma, Istituto della Enciclopedia Italiana, 1975, pp. 246-247.<br>
+Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/giacomo-cantelli_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p><br><br><br>	
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 	<p><big><big><center>Caterina Piotti Pìrola (1800-1842?), ritratto postumo di Giacomo Cantelli, incisione,<br> a partire da un disegno antico fatto dal vivo. Fonte: <i>Iconografia dei celebri vignolesi. Opera edita<br> per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839. Il piccolo libro in oggetto è una<br> pubblicazione periodica di natura collettiva costituita di sette dispense singole (le quali presentano in alcuni casi<br> note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato, ad esempio «Presso il<br> libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br>  <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>,<i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione della Piotti Pìrola apre la dispensa su Cantelli,<br> il cui testo scritto è firmato in calce Nicolò Cesare Garoni.</center></big></big></p>
