--- a/Barozzi.html
+++ b/Barozzi.html
@@ -47,7 +47,7 @@ Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Prim
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>ADORNI, Bruno: <i>Jacopo Barozzi da Vignola</i>, Milano, Skira, 2008.</big></p>
 
-<p><big>BOTTARI, Stefano: <i>Barozzi, Iacopo, detto il Vignola</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. VI, Roma, Istituto della Enciclopedia Italiana, 1964, pp. 502-508.<br>
+<p><big>BOTTARI, Stefano: <i>Barozzi, Iacopo, detto il Vignola</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. VI, Roma, Istituto della Enciclopedia italiana, 1964, pp. 502-508.<br>
 Questa voce enciclopedica è disponibile anche nel sito web della <a href="https://www.treccani.it/enciclopedia/barozzi-iacopo-detto-il-vignola_(Dizionario-Biografico)/">Treccani</a>, senza paginazione.</big></p>
 
 <p><big>DAMERI, Debora - LODOVISI, Achille - TRENTI, Giuseppe: <i>Il Conte, l’Architetto e il Palazzo. Il Palazzo di Hercole il vecchio. Secolo XIV</i>, s.l. [ma: Vignola (MO)], Fondazione di Vignola - Centro di documentazione {s.l., Tipografia Silvestri}, 2002, pp. 51-64 (ossia l’intero capitolo <i>I Barozzi e Vignola</i>).</big></p>
