--- a/aquilaavoltoiocivetta.html
+++ b/aquilaavoltoiocivetta.html
@@ -28,7 +28,7 @@
 </header>
 <section>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
-<h3><center><big><big><strong>L'aquila, l'avoltoio e la civetta</strong></big></big></center></h3><br><br>
+<h3><center><big><big><strong>L’aquila, l’avoltoio e la civetta</strong></big></big></center></h3><br><br>
 
 
 <p><big>L’aquila, re degli uccelli, veggendo che le tornava impossibile di governare da sola i suoi vasti dominii, per la lontananza dei luoghi e le diversità delle favelle, spartì il reame in provincie, a ciascuna delle quali deputò un suo vicario scelto tra i più fidi della milizia, della baronia e della cittadinanza. Là, in due paesi dei più remoti dalla sua sede, abitati da anitre e da beccafichi, mandò con pieni poteri, a reggere in nome suo, l’avoltoio e la civetta, ciascuno dei quali con un incarico proprio, ma nondimeno così artificiosamente in dipendenza tra di loro, che a nessuno fosse in facoltà di operare a proprio capriccio, senza consiglio o sorveglianza dell’altro.<br>
