--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -60,7 +60,7 @@
 
 <tr>
 <td><big><big><strong><a href="aquilaavoltoiocivetta.html">13. L’aquila, l’avoltoio e la civetta</i></a></strong></td>
-<td><big><big><strong><a href="cavaliere.html">14. Un nuovo cavaliere errante</a></strong></td></tr>
+<td><big><big><strong><a href="cavaliereerrante.html">14. Un nuovo cavaliere errante</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="mazzofiori.html">15. Un mazzo di fiori</a></strong></td>
