--- a/gennaio.html
+++ b/gennaio.html
@@ -38,7 +38,7 @@ Barbanti Bròdano godette di un’apprezzabile fama anche nel mondo del giornali
 Barbanti Bròdano fu affiliato a due logge massoniche felsinee, la “Rizzoli” (1882-1885) e la “Aurelio Saffi” (1910-1914), ed esercitò la carica di consigliere provinciale per il mandamento di Medicina (ultimi anni del XIX secolo).<br>
 Pur considerandosi sempre socialista, il Vignolese faticò a seguire i precetti più tradizionali del suo schieramento politico, preferendo sposare concezioni umanitarie e – insieme – garibaldine e patriottiche. Per queste sue idee, venne espulso dal Partito Socialista Italiano (1896).<br>
 Nel 1911 si trasferì a Roma, dove continuò a svolgere per alcuni anni l’attività di avvocato.<br> 
-Ritiratosi dalla professione, rientrò in Emilia. Morì a Casalecchio di Reno il 17 agosto 1931 e fu sepolto a Bologna, nel cimitero della Certosa.<br><br>
+Ritiratosi dalla professione, rientrò in Emilia. Morì a Casalecchio di Reno il 17 agosto 1931 e fu sepolto a Bologna, nel Cimitero Monumentale della Certosa.<br><br>
 
 Nell’immagine sottostante, fotografia recente della facciata nord-est di Villa Roma (già Villa Barbanti), la dimora di famiglia di Giuseppe Barbanti Bròdano a Vignola.
 </big></p><br><br><br>
