--- a/agosto.html
+++ b/agosto.html
@@ -54,7 +54,7 @@ Giunti feretro e corteo al camposanto di Vignola (quello che precedeva il cimite
 Nelle due immagini qui sotto, fotografie recenti della cappella funebre di Francesco Selmi, inaugurata nel 1901 in una piccola area dell’allora nuovo cimitero di Vignola (lo stesso a tutt’oggi utilizzato) messa a disposizione dal Comune. Questa cappella racchiude il busto realizzato nel medesimo anno dallo scultore maranese Domenico Bernabei (1854-1936) e la lapide con l’iscrizione dettata dal patriota e politico modenese Luigi Zini (1821-1894), amico dell’estinto.</big></p><br><br><br>
 <img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="450" height="700"><br><br><br>
 <img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"><br><br><br>
-<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p class="index-p3"><strong>17 agosto 1931</strong>: morì a Casalecchio di Reno <strong>GIUSEPPE BARBANTI BRÒDANO</strong>, avvocato, politico, scrittore, giornalista e patriota. Venne sepolto a Bologna, nel Cimitero Monumentale della Certosa.<br><br>
 Nato a Vignola il 10 gennaio 1853 da una famiglia borghese di ferme convinzioni democratiche e patriottiche originaria di Modena, a soli diciassette anni Giuseppe Barbanti Bròdano si laureò in Legge presso l’Università geminiana.<br>
