--- a/aquilaavoltoiocivetta.html
+++ b/aquilaavoltoiocivetta.html
@@ -48,12 +48,13 @@ Come l’aquila si fu ripresa dallo smarrimento ed ebbe considerato e meditato s
 «Signora, soggiunse incontanente la civetta; interrogate quelle ombre e loro domandate se da me o da altri il fattone macello.»<br>
 L’avoltoio capì tosto dove si scaricarebbe la bufera, e fu audace e pronto a scongiurarla:<br> «Signora, sclamò con voce ferma e faccia imperterrita, se coloro parlassero, me accuserebbero di avere compiuta l’opera, e questa fattuchiera d’averla ordita e preparata. Ma io non curo di scagionarmi; dessi erano irrequieti, riottosi, ribelli all’autorità vostra, in continuo conato di scuoterne la signoria, ond’io visti inutili i blandi rimedii, ricorsi ai forti, invocai l’aiuto degli amici miei, e insieme demmo dentro alla turba vile, che si sparpagliò e si sottomise.»<br>
 «Ma tu mi trasformasti siti frequentissimi in un cimitero desolato.»<br>
-«Signora! tra perderli popolati o conservarli in cimitero, che avreste scelto voi?»<br><br>
+«Signora! tra perderli popolati o conservarli in cimitero, che avreste scelto voi?»***<br><br>
 L’aquila ebbe il torto massimo di quanto accadde, e su di lei pesa la colpa. Conoscendo la natura dell’avoltoio e della civetta, doveva mai eleggerli a suoi vicarii in paesi dove avrebbero potuto scapricciarsi a loro posta, e saziare a libito le loro voglie ingorde!
 </big></p><br><br><br>
 
-<p><big>*Nell’originale, questa virgola risulta assente, ma ce n’è una prima di «se».<br>
-**Nell’originale, qui è presente una virgola.</big></p><br><br><br>
+<p><big>* Nell’originale, questa virgola risulta assente, ma ce n’è una prima di «se».<br>
+** Nell’originale, qui è presente una virgola.<br>
+*** Nell’originale, la riga successiva risulta composta per intero di puntini. Tuttavia, poiché in quelle favole della raccolta che si concludono con la morale questa viene di solito scritta dopo uno stacco di una riga bianca dal testo precedente, qui preferiamo agire nello stesso modo.</big></p><br><br><br>
 
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
