--- a/Barbanti Bròdano.html
+++ b/Barbanti Bròdano.html
@@ -32,7 +32,7 @@
 <big>(1853-1931)</big></center></h3><br><br><br>
 <h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	
-<p><big><strong>GIUSEPPE BARBANTI BRÒDANO</strong>, avvocato, politico, scrittore, giornalista e patriota, nacque a Vignola il 10 gennaio 1853.<br>
+<p><big><strong>GIUSEPPE BARBANTI BRÒDANO</strong>, avvocato, politico, scrittore, giornalista e patriota, nacque a Vignola il 10 gennaio 1853 (nella lapide funeraria, tuttavia, viene indicato per errore il giorno precedente).<br>
 La sua famiglia, di ceto borghese e di robusti ideali democratici e patriottici, era originaria di Modena e gli trasmise un acceso amore per la libertà e per l’Italia.<br>
 Di temperamento focoso e d’ingegno precoce, Barbanti Bròdano si laureò in Legge ad appena diciassette anni presso l’Ateneo geminiano. Già da adolescente, egli iniziò ad abbracciare concezioni democratico-radicali.<br>
 Nel 1873 venne assunto a Bologna nello studio dell’avvocato Giuseppe Cicognari († 1879) e ben presto si fece notare come legale attento e facondo. Fallito il moto insurrezionale di Bologna e della Romagna del 1874, il conseguente processo ad Andrea Costa (1851-1910) e ad altri socialisti (1876) vide Barbanti Bròdano, al tempo giovanissimo, come primo avvocato di difesa; lo affiancava Giuseppe Ceneri (1827-1898), illustre principe del foro ed esponente di primo piano del mondo liberale progressista felsineo. In tribunale, il Vignolese pronunciò un’arringa, destinata a divenire celebre e a circolare in opuscolo, nell’ambito della quale egli promosse una versione moderata di socialismo e difese brillantemente l’Internazionale dalle accuse rivoltele dal pubblico ministero, che riteneva il movimento socialista pericoloso per la sicurezza pubblica e per l’ordinamento vigente.<br>
@@ -54,7 +54,7 @@ Nel 1911 Barbanti Bròdano si trasferì a Roma con la famiglia, composta della m
 	<center><img src="img/celebri vignolesi/Barbanti Brodano/donchisciotte.jpg" width="450" height="600"></center><br><br><br>
 	<center><big><big>Tomba della famiglia Barbanti Bròdano nel Cimitero Monumentale della Certosa, a Bologna.</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Barbanti Brodano/tomba.jpg" width="500" height="650"></center><br><br><br>
-	<center><big><big>Lapide funeraria dedicata a Giuseppe Barbanti Bròdano.</big></big></center><br>
+	<center><big><big>Lapide funeraria dedicata a Giuseppe Barbanti Bròdano (in realtà, la data di nascita non è il 9 gennaio 1853, ma il giorno dopo)​.</big></big></center><br>
 	<center><img src="img/celebri vignolesi/Barbanti Brodano/lapide.jpg" width="500" height="650"></center><br><br><br>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br>
 </section>
