--- a/Muratori.html
+++ b/Muratori.html
@@ -73,6 +73,19 @@
 <p><big><i>Della Carità Cristiana, in quanto essa è Amore del Prossimo, Trattato Morale di Lodovico Antonio Muratori</i> [...], In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723, p. 227 (cap. XXII).</big></p><br><br><br>
  	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+	
+<p><center><big><big>Frontespizio di <i>Anecdota, quæ ex Ambrosianæ Bibliothecæ codicibus<br> Nunc primùm eruit, notis, ac disquisitionibus auget Ludovicus Antonius Muratorius,<br> in eadem Bibliotheca Ambrosiani Collegij Doctor.<br> Tomus prior Quatuor S. Paulini Episcopi Nolani Poemata complectens</i>,<br> Mediolani, Typis Iosephi Pandulfi Malatestæ, 1697. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota.jpg" width="550" height="700"><br><br><br>
+
+<p><center><big><big>Frontespizio di <i>Vita di Carlo Maria Maggi, Scritta da Lodovic’Antonio Muratori, Bibliotecario del Sereniss. Sig. Duca di Modena,<br> e dedicata All’Illustriss., ed Eccellentiss. Signor D. Giansimone Enriquez de Cabrera, Del Consiglio di Guerra, Mastro di Campo Generale,<br> e Governadore della Città e Provincia d’Alessandria per Sua Maestà Cattolica nello Stato di Milano</i>,<br> In Milano, Per Giuseppe Pandolfo Malatesta, 1700. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/carlomaggi.jpg" width="525" height="680"><br><br><br>
+
+<p><center><big><big>Frontespizio di <i>Anecdota Graeca quae ex mss. codicibus<br> Nunc primum eruit, Latio donat</i>, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius,<br> Sereniss. Raynaldi I. Mutinae &c. Ducis Bibliothecarius,<br> Patavii, Typis Seminarii, Apud Joannem Manfré, 1709. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota2.jpg" width="500" height="710"><br><br><br>
+
+<p><center><big><big><i>Della forza della fantasia umana trattato di Lodovico Antonio Muratori, Bibliotecario del Serenissimo Signor Duca di Modena</i>,<br> In Venezia, Presso Giambatista Pasquali, 1745.  Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/fantasia.jpg" width="560" height="770"><br><br><br>	
+	
 <p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal<br> ritratto esistente nella Venerabile Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi.<br> Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839.<br> Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, <br>il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
