--- a/Garavini.html
+++ b/Garavini.html
@@ -60,6 +60,8 @@ Allo stato attuale degli studi, non siamo al corrente né della data né del luo
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Arsenale della Marina di Algeri, incisione anonima del 1835. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Garavini Carlo/arsenale.jpg" width="900" height="500"><br><br><br>	
+	<p><center><big><big>L’emiro algerino Abd-el-Kader (1808-1883). Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Garavini Carlo/Emiro.jpg" width="700" height="500"><br><br>	
 <p><center><big><big>Palazzo d’Ambra (già Villa Garavini) a Ischia, immagine risalente al 1970 circa. Fonte: google.com</center><big></big></p>
 <img src="img/celebri vignolesi/Garavini Carlo/1970.jpg" width="850" height="600"><br><br>
 <p><center>Foto recente del Palazzo D’Ambra. Fonte: google.com</center></p>
