--- a/Paradisi.html
+++ b/Paradisi.html
@@ -49,40 +49,40 @@ Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nel
 	
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big>ALFIERI, Laura Margherita: <i>Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
+<p><big><strong>ALFIERI, Laura Margherita</strong>: <strong><i>Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i></strong>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
 
-<p><big>EAD.: <i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
+<p><big><strong>EAD.</strong>: <strong><i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i></strong>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
 
-<p><big>CAGNOLI, Luigi: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI</i>, in <i>Poesie e prose scelte del conte Agostino Paradisi</i>, 2 tt., Reggio [Emilia], Per Pietro Fiaccadori, 1827, t. I (senza titolo specifico), pp. V-XLVII.<br>
+<p><big><strong>CAGNOLI, Luigi</strong>: <strong><i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI</i></strong>, in <i>Poesie e prose scelte del conte Agostino Paradisi</i>, 2 tt., Reggio [Emilia], Per Pietro Fiaccadori, 1827, t. I (senza titolo specifico), pp. V-XLVII.<br>
 Del presente testo esiste una II edizione corretta e ampliata: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI da Luigi Cagnoli</i>, in <i>Poesie scelte del conte Agostino Paradisi con l’elogio dell’Autore</i>, Milano, Dalla Società Tipografica de’ Classici Italiani, 1830, pp. VII-LXVIII.</big></p>
 
-<p><big>CAVATORTI, Giuseppe: <i>Agostino Paradisi (1736-1783). Monografia. Parte I (1736-1764)</i>, Torino, Carlo Clausen - Hans Rinck (Villafranca [VR], Tipo-Litografia L. Rossi), 1907.</big></p>
+<p><big><strong>CAVATORTI, Giuseppe</strong>: <strong><i>Agostino Paradisi (1736-1783). Monografia. Parte I (1736-1764)</i></strong>, Torino, Carlo Clausen - Hans Rinck [Villafranca (VR), Tipo-Litografia L. Rossi], 1907.<br>
+Dell’opera uscì solo questo primo volume.</big></p>
 
-<p><big>DATTERO, Alessandra: <i>Paradisi, Agostino</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.<br>
+<p><big><strong>DATTERO, Alessandra</strong>: <strong><i>Paradisi, Agostino</i></strong>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.<br>
 Questa voce enciclopedica è disponibile anche nel sito web della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
 
-<p><big><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i>, Modena, Presso la Società Tipografica, 1789.<br>
+<p><big><strong><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i></strong>, Modena, Presso la Società Tipografica, 1789.<br>
 Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II edizione, con lo stesso titolo, In Modena, Presso la Società Tipografica, 1793; III edizione, <i>Elogio del conte Agostino Paradisi scritto dal sig. Pietro Schedoni</i>, Modena, Per gli eredi Soliani, Tipografi Reali, 1819.</big></p>
 
-<p><big>MONTAGUTI, Silvio - ARMANI, Giuseppe: <i>Agostino Paradisi. 1736-1783</i>, Vignola (MO), Centro di documentazione, 1983.</big></p>
+<p><big><strong>MONTAGUTI, Silvio - ARMANI, Giuseppe</strong>: <strong><i>Agostino Paradisi. 1736-1783</i></strong>, Vignola (MO), Centro di documentazione, 1983.</big></p>
 
-<p><big>TAMASSIA, Franco: <i>Le idee di filosofia politica e giuridica di Agostino Paradisi</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, cit., pp. 172-259.</big></p>
+<p><big><strong>TAMASSIA, Franco</strong>: <strong><i>Le idee di filosofia politica e giuridica di Agostino Paradisi</i></strong>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, cit., pp. 172-259.</big></p>
 
+<p><big><strong>VENTURELLI, Piero</strong>:<strong><i>Verso il Risorgimento. Agostino Paradisi</i> junior <i>(1736-1783): vita, opere e patriottismo culturale di un grande illuminista italiano</i></strong>, «Il Pensiero Mazziniano. Democrazia in azione», N.S., a. LXVIII (2013), fasc. 3 [ma: 2014], pp. 11-40.</big></p>
 
-<p><big>VENTURELLI, Piero: <i>Verso il Risorgimento. Agostino Paradisi</i> junior <i>(1736-1783): vita, opere e patriottismo culturale di un grande illuminista italiano</i>, «Il Pensiero Mazziniano. Democrazia in azione», N.S., a. LXVIII (2013), fasc. 3 [ma: 2014], pp. 11-40.</big></p>
+<p><big><strong>ID.</strong>: <a href="https://www.bibliomanie.it/?p=1742"><strong><i>Agostino Paradisi</i> iunior <i>(1736-1783). Uomo di lettere e di teatro. Storico ed economista</i></strong></a>, «Bibliomanie. Letterature, storiografie, semiotiche», a. X (2014), n. 1 [complessivamente, n. 35], senza paginazione.</big></p>
 
-<p><big>ID.: <a href="https://www.bibliomanie.it/?p=1742"><i>Agostino Paradisi</i> iunior <i>(1736-1783). Uomo di lettere e di teatro. Storico ed economista</i></a>, «Bibliomanie. Letterature, storiografie, semiotiche», a. X (2014), n. 1 [complessivamente, n. 35], senza paginazione.</big></p>
+<p><big><strong>ID.</strong>: <strong><i>Agostino Paradisi </i>il Giovane <i>e la polemica letteraria italo-francese del 1765</i></strong>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
 
-<p><big>ID.: <i>Agostino Paradisi il Giovane e la polemica letteraria italo-francese del 1765</i>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
-
-<p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.<br>
+<p><big><strong>ID.</strong>: <strong><i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i></strong>, «Montesquieu.it», n. 10 (2018), pp. 139-201.<br>
 Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
 
-<p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.<br>
+<p><big><strong>ID.</strong>: <strong><i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane</strong>, «Montesquieu.it», n. 13 (2021), pp. 167-193.<br>
 Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15.</big></p>
 
-<p><big>VENTURI, Franco: <i>Ritratto di Agostino Paradisi</i>, «Rivista storica italiana», a. LXXIV (1962), fasc. 4, pp. 717-738.</big></p><br><br><br>
-	
+<p><big><strong>VENTURI, Franco</strong>: <strong><i>Ritratto di Agostino Paradisi</i></strong>, «Rivista storica italiana», a. LXXIV (1962), fasc. 4, pp. 717-738.</big></p><br><br><br>
+
 	
 <h5><big><big><big><big><strong><center>PARADISI E L’APOLOGIA DI DANTE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Nel XVIII secolo, erano tutto sommato poche le persone colte che, in Italia come all’estero, ammiravano la poesia di Dante: in quel periodo, infatti, si preferivano generalmente opere in versi caratterizzate da un disegno armonico e da uno stile chiaro, elegante e sostenuto, e prive di nozioni e rimandi filosofico-teologici tratti dalla Scolastica; la <i>Commedia</i>, invece, era contraddistinta non di rado da un lessico basso e veniva ritenuta troppo oscura, disordinata e intrisa di idee medioevali.<br>
