--- a/Muratori.html
+++ b/Muratori.html
@@ -74,18 +74,6 @@
  	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 	
-<p><center><big><big>Frontespizio di <i>Anecdota, quæ ex Ambrosianæ Bibliothecæ codicibus<br> Nunc primùm eruit, notis, ac disquisitionibus auget Ludovicus Antonius Muratorius,<br> in eadem Bibliotheca Ambrosiani Collegij Doctor.<br> Tomus prior Quatuor S. Paulini Episcopi Nolani Poemata complectens</i>,<br> Mediolani, Typis Iosephi Pandulfi Malatestæ, 1697. Fonte: collezione privata.</big></big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota.jpg" width="550" height="700"><br><br><br>
-
-<p><center><big><big>Frontespizio di <i>Vita di Carlo Maria Maggi, Scritta da Lodovic’Antonio Muratori, Bibliotecario del Sereniss. Sig. Duca di Modena,<br> e dedicata All’Illustriss., ed Eccellentiss. Signor D. Giansimone Enriquez de Cabrera, Del Consiglio di Guerra, Mastro di Campo Generale,<br> e Governadore della Città e Provincia d’Alessandria per Sua Maestà Cattolica nello Stato di Milano</i>,<br> In Milano, Per Giuseppe Pandolfo Malatesta, 1700. Fonte: collezione privata.</big></big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/carlomaggi.jpg" width="525" height="680"><br><br><br>
-
-<p><center><big><big>Frontespizio di <i>Anecdota Graeca quae ex mss. codicibus<br> Nunc primum eruit, Latio donat</i>, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius,<br> Sereniss. Raynaldi I. Mutinae &c. Ducis Bibliothecarius,<br> Patavii, Typis Seminarii, Apud Joannem Manfré, 1709. Fonte: collezione privata.</big></big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota2.jpg" width="500" height="710"><br><br><br>
-
-<p><center><big><big><i>Della forza della fantasia umana trattato di Lodovico Antonio Muratori, Bibliotecario del Serenissimo Signor Duca di Modena</i>,<br> In Venezia, Presso Giambatista Pasquali, 1745.  Fonte: collezione privata.</big></big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/fantasia.jpg" width="560" height="770"><br><br><br>	
-	
 <p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal<br> ritratto esistente nella Venerabile Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi.<br> Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839.<br> Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, <br>il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
@@ -100,10 +88,6 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecanonica2.jpg" width="730" height="580"><br><br><br>
 <p><center><big>Facciata della Venerabile Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
-<p><center><big>Frontespizio di <i>Introduzione alle paci private, composta, e dedicata all’Altezza Serenissima<br> di Rinaldo I. Duca di Modena, Reggio &c. da Lod.co Antonio Muratori suo bibliotecario.<br> S’aggiungono un Ragionamento di Sperone Speroni intorno al</i> Duello <i>e un Trattato della</i> Pace<br> <i>di Giovam-Batista Pigna non pubblicati finora</i>, In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708.<br> L’esemplare del volume qui utilizzato appartiene a una collezione privata.</big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/paciprivate.jpg" width="500" height="640"><br><br><br>
-	<p><center><big>Frontespizio di <i>Della Carità Cristiana, In quanto essa è Amore del Prossimo,<br> Trattato Morale di Lodovico Antonio Muratori Bibliotecario del Serenissimo Sig. Duca di Modena &c.<br> Dedicato alla Sacra Cesarea Cattolica Real Maestà di Carlo VI. Imperadore de’ Romani, Re delle Spagne, Ungheria, Boemia &c.</i>,<br> In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723. Fonte: google.com</big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/caritàcristiana.jpg" width="490" height="650"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
 <p><center><big>Aedes Muratoriana (casa nella quale Muratori abitò dal 1716 al 1750.<br> L’accesso si trova dietro Santa Maria della Pomposa).</big></center></p>
@@ -112,6 +96,18 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"><br><br>
+<p><center><big><big>Frontespizio di <i>Anecdota, quæ ex Ambrosianæ Bibliothecæ codicibus<br> Nunc primùm eruit, notis, ac disquisitionibus auget Ludovicus Antonius Muratorius,<br> in eadem Bibliotheca Ambrosiani Collegij Doctor.<br> Tomus prior Quatuor S. Paulini Episcopi Nolani Poemata complectens</i>,<br> Mediolani, Typis Iosephi Pandulfi Malatestæ, 1697. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota.jpg" width="550" height="700"><br><br><br>
+<p><center><big><big>Frontespizio di <i>Vita di Carlo Maria Maggi, Scritta da Lodovic’Antonio Muratori, Bibliotecario del Sereniss. Sig. Duca di Modena,<br> e dedicata All’Illustriss., ed Eccellentiss. Signor D. Giansimone Enriquez de Cabrera, Del Consiglio di Guerra, Mastro di Campo Generale,<br> e Governadore della Città e Provincia d’Alessandria per Sua Maestà Cattolica nello Stato di Milano</i>,<br> In Milano, Per Giuseppe Pandolfo Malatesta, 1700. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/carlomaggi.jpg" width="525" height="680"><br><br><br>
+<p><center><big><big>Frontespizio di <i>Anecdota Graeca quae ex mss. codicibus<br> Nunc primum eruit, Latio donat</i>, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius,<br> Sereniss. Raynaldi I. Mutinae &c. Ducis Bibliothecarius,<br> Patavii, Typis Seminarii, Apud Joannem Manfré, 1709. Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota2.jpg" width="500" height="710"><br><br><br>
+<p><center><big><big>Frontespizio di <i>Della forza della fantasia umana trattato di Lodovico Antonio Muratori, Bibliotecario del Serenissimo Signor Duca di Modena</i>,<br> In Venezia, Presso Giambatista Pasquali, 1745.  Fonte: collezione privata.</big></big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/fantasia.jpg" width="560" height="770"><br><br><br>
+<p><center><big>Frontespizio di <i>Introduzione alle paci private, composta, e dedicata all’Altezza Serenissima<br> di Rinaldo I. Duca di Modena, Reggio &c. da Lod.co Antonio Muratori suo bibliotecario.<br> S’aggiungono un Ragionamento di Sperone Speroni intorno al</i> Duello <i>e un Trattato della</i> Pace<br> <i>di Giovam-Batista Pigna non pubblicati finora</i>, In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708.<br> L’esemplare del volume qui utilizzato appartiene a una collezione privata.</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/paciprivate.jpg" width="500" height="640"><br><br><br>
+<p><center><big>Frontespizio di <i>Della Carità Cristiana, In quanto essa è Amore del Prossimo,<br> Trattato Morale di Lodovico Antonio Muratori Bibliotecario del Serenissimo Sig. Duca di Modena &c.<br> Dedicato alla Sacra Cesarea Cattolica Real Maestà di Carlo VI. Imperadore de’ Romani, Re delle Spagne, Ungheria, Boemia &c.</i>,<br> In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723. Fonte: google.com</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/caritàcristiana.jpg" width="490" height="650"><br><br><br>	
 <p><center><big>Lapide dedicata a Muratori nella chiesa dei Santi Nazario e Celso a Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="850" height="600"></p>	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
