--- a/Muratori.html
+++ b/Muratori.html
@@ -100,16 +100,17 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota.jpg" width="550" height="700"><br><br><br>
 <p><center><big>Frontespizio di <i>Vita di Carlo Maria Maggi, Scritta da Lodovic’Antonio Muratori, Bibliotecario del Sereniss. Sig. Duca di Modena,<br> e dedicata All’Illustriss., ed Eccellentiss. Signor D. Giansimone Enriquez de Cabrera, Del Consiglio di Guerra, Mastro di Campo Generale,<br> e Governadore della Città e Provincia d’Alessandria per Sua Maestà Cattolica nello Stato di Milano</i>,<br> In Milano, Per Giuseppe Pandolfo Malatesta, 1700. Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/carlomaggi.jpg" width="525" height="680"><br><br><br>
-<p><center><big>Frontespizio di <i>Anecdota Graeca quae ex mss. codicibus<br> Nunc primum eruit, Latio donat</i>, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius,<br> Sereniss. Raynaldi I. Mutinae &c. Ducis Bibliothecarius,<br> Patavii, Typis Seminarii, Apud Joannem Manfré, 1709. Fonte: collezione privata.</big></center></p>
+<p><center><big>Frontespizio di <i>Anecdota Graeca quae ex mss. codicibus<br> Nunc primum eruit, Latio donat, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius,<br> Sereniss. Raynaldi I. Mutinae &c. Ducis Bibliothecarius</i>,<br> Patavii, Typis Seminarii, Apud Joannem Manfré, 1709. Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota2.jpg" width="500" height="710"><br><br><br>
 <p><center><big>Frontespizio di <i>Della forza della fantasia umana trattato di Lodovico Antonio Muratori, Bibliotecario del Serenissimo Signor Duca di Modena</i>,<br> In Venezia, Presso Giambatista Pasquali, 1745.  Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/fantasia.jpg" width="560" height="770"><br><br><br>
-<p><center><big>Frontespizio di <i>Introduzione alle paci private, composta, e dedicata all’Altezza Serenissima<br> di Rinaldo I. Duca di Modena, Reggio &c. da Lod.co Antonio Muratori suo bibliotecario.<br> S’aggiungono un Ragionamento di Sperone Speroni intorno al</i> Duello <i>e un Trattato della</i> Pace<br> <i>di Giovam-Batista Pigna non pubblicati finora</i>, In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708.<br> L’esemplare del volume qui utilizzato appartiene a una collezione privata.</big></center></p>
+<p><center><big>Frontespizio di <i>Introduzione alle paci private, composta, e dedicata all’Altezza Serenissima<br> di Rinaldo I. Duca di Modena, Reggio &c. da Lod.co Antonio Muratori suo bibliotecario.<br> S’aggiungono un Ragionamento di Sperone Speroni intorno al</i> Duello <i>e un Trattato della</i> Pace<br> <i>di Giovam-Batista Pigna non pubblicati finora</i>, In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708.<br> Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/paciprivate.jpg" width="500" height="640"><br><br><br>
 <p><center><big>Frontespizio di <i>Della Carità Cristiana, In quanto essa è Amore del Prossimo,<br> Trattato Morale di Lodovico Antonio Muratori Bibliotecario del Serenissimo Sig. Duca di Modena &c.<br> Dedicato alla Sacra Cesarea Cattolica Real Maestà di Carlo VI. Imperadore de’ Romani, Re delle Spagne, Ungheria, Boemia &c.</i>,<br> In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723. Fonte: google.com</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/caritàcristiana.jpg" width="490" height="650"><br><br><br>	
 <p><center><big>Lapide dedicata a Muratori nella chiesa dei Santi Nazario e Celso a Vignola.</big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="850" height="600"></p>	
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="850" height="600"></p><br><br>
+													  
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
