--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -51,7 +51,7 @@
 <td><big><big><strong><a href="asino.html">8. Il contadino che ama l’asino</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="rosaalpi.html">9. La rosa delle alpi</a></strong></td>
+<td><big><big><strong><a href="rosaalpi.html">9. La rosa delle Alpi</a></strong></td>
 <td><big><big><strong><a href="riccamendica.html">10. La ricca e la mendica</a></strong></td></tr>
 
 <tr>
