--- a/Paradisi.html
+++ b/Paradisi.html
@@ -105,7 +105,7 @@ Quella di Paradisi fu una reazione ferma e circostanziata che, pur nella polemic
 
 <h4><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h4><br><br>
 <p><big><big><center>Ritratto di Paradisi, dipinto a olio su tela; fu eseguito nel tardo Settecento ed è conservato nel Palazzo (o Villa) Albergati a Zola Predosa. L’opera viene comunemente attribuita a Giuseppe Valiani (o Valliani, o Vagliani), artista pistoiese i cui estremi cronologici sono il 1731 e il 1800; se l’autore fosse davvero lui, è pensabile che questo ritratto risalga all’incirca al 1770-1780, lasso di tempo in cui egli fu al lavoro presso Palazzo Albergati, dove realizzò alcuni affreschi (volte di camere, al terzo piano).</center></big></big></p>
-<center><img src="img/celebri vignolesi/Paradisi/ritratto.jpg" width="580" height="700"></center><br><br><br>
+<center><img src="img/celebri vignolesi/Paradisi/ritratto.jpg" width="520" height="650"></center><br><br>
 <p><big><big><center>Busto di Paradisi (1780), attribuito allo scultore romano<br> Bartolomeo Cavaceppi (1716 ca. - 1799); collezione privata.<br>
 Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/Cavaceppi2.jpg" width="450" height="600"></center><br><br>
@@ -114,7 +114,7 @@ Fonte: google.com</center></big></big></p>
 <p><big><big><center>Ritratto di fantasia di Paradisi, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per il Circolo “Paradisi” di Vignola.</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/paradisipippo.jpg" width="450" height="630"><br><br>
 <p><big><big><center>Lapide che, nel cortile interno della rocca di Vignola, attesta la nascita di Paradisi all’interno del monumentale edificio.</center></big></big></p>
-<center><img src="img/celebri vignolesi/Paradisi/lapide.jpg" width="750" height="550"></center><br><br><br>
+<center><img src="img/celebri vignolesi/Paradisi/lapide.jpg" width="750" height="550"></center><br><br>
 <p><big><big><center>Palazzo Tirelli (già Palazzo Gabbi), Reggio Emilia, a lungo dimora di Paradisi. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Paradisi/palazzo tirelli.jpg" width="400" height="650"><br><br>
 <p><big><big><center>Sede del Collegio Nazareno di Roma, l’istituto dove studiò Paradisi durante l'adolescenza, in un’antica stampa<br> (il Collegio è tuttora accolto nel palazzo cinquecentesco in fondo).<br> 
