--- a/Muratori.html
+++ b/Muratori.html
@@ -97,7 +97,7 @@
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"><br><br>
 <p><center><big>Lapide dedicata a Muratori nella chiesa dei Santi Nazario e Celso a Vignola.</big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="850" height="600"></p><br><br>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="850" height="600"><br><br>
 
 <p><center><big>Frontespizio di <i>Anecdota, quæ ex Ambrosianæ Bibliothecæ codicibus<br> Nunc primùm eruit, notis, ac disquisitionibus auget Ludovicus Antonius Muratorius,<br> in eadem Bibliotheca Ambrosiani Collegij Doctor.<br> Tomus prior Quatuor S. Paulini Episcopi Nolani Poemata complectens</i>,<br> Mediolani, Typis Iosephi Pandulfi Malatestæ, 1697. Fonte: collezione privata.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/anecdota.jpg" width="500" height="670"><br><br>
