--- a/Celebri Vignolesi.html
+++ b/Celebri Vignolesi.html
@@ -18,8 +18,8 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>
 <nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
+<strong><li><a href="index.html">HOME</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li class="active"><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
@@ -27,56 +27,55 @@
 </ul>
 </nav>
 </header>
-<section><br>
-  <h2><strong><big>CELEBRI VIGNOLESI</big></strong></h2><br><br><br>
+<section><br><br>
+  <h2><strong><big>CELEBRI VIGNOLESI</big></strong></h2><br><br>
   <center>
 <table>
-<tr>
+	<tr></tr>
 <td><big><big><strong><a href="Barbanti Bròdano.html">Giuseppe Barbanti Bròdano</a></strong></big></big></td>
 <td><big><big><strong><a href="Barozzi.html">Giacomo Barozzi</a></strong></td>
 <td><big><big><strong><a href="Belloi1.html">Domenico Belloi</td>
 </tr>
-<tr>	
+<tr>
 <td><big><big><strong><a href="Belloi2.html">Pietro Ercole Belloi</a></strong></td>
 <td><big><big><strong><a href="Bernardoni.html">Pietro Antonio Bernardoni</a></strong></td>
-<td><big><big><strong><a href="Bettelli.html">Casimiro Bettelli</a></strong></td></tr>
+<td><big><big><strong><a href="Bettelli.html">Casimiro Bettelli</a></strong></td>
+</tr>
 <tr>
 <td><big><big><strong><a href="Bondioli.html">Luigi Bondioli</a></strong></td>
 <td><big><big><strong><a href="Cantelli.html">Giacomo Cantelli</a></strong></td>
-<td><big><big><strong><a href="Fontana.html">Giovanni Fontana</a></strong></td>
-</tr>
+<td><big><big><strong><a href="Fontana.html">Giovanni Fontana</a></strong></td> </tr>
 <tr>
 <td><big><big><strong><a href="Garavini.html">Carlo Garavini</a></strong></td>
 <td><big><big><strong><a href="Gazzotti.html">Luigi Gazzotti</a></strong></td>
-<td><big><big><strong><a href="Minghelli.html">Pietro Minghelli</a></strong></td></tr>
+<td><big><big><strong><a href="Minghelli.html">Pietro Minghelli</a></strong></td>
+</tr>
 <tr>
 <td><big><big><strong><a href="Muratori.html">Lodovico Antonio Muratori</i></a></strong></td>
+<td><big><big><strong><a href="Neri1.html">Attilio Neri</a></strong></td>
+<td><big><big><strong><a href="Neri2.html">Nèttore Neri</a></strong></td></tr>
+<tr>
 <td><big><big><strong><a href="Paradisi.html">Agostino Paradisi <i>il Giovane</i></a></strong></td>
 <td><big><big><strong><a href="Pellegrini.html">Mario Pellegrini</a></strong></td>
-</tr>
+<td><big><big><strong><a href="Plessi1.html">Alessandro Plessi</a></strong></td></tr>
 <tr>
-<td><big><big><strong><a href="Plessi1.html">Alessandro Plessi</a></strong></td>
 <td><big><big><strong><a href="Plessi2.html">Giuseppe Antonio Plessi</a></strong></td>
 <td><big><big><strong><a href="Redorici Roffi.html">Augusta Redorici Roffi</a></strong></td>
-</tr>
+<td><big><big><strong><a href="Rodolfi.html">Giovanni Rodolfi</a></strong></td></tr>
 <tr>
-<td><big><big><strong><a href="Rodolfi.html">Giovanni Rodolfi</a></strong></td>
 <td><big><big><strong><a href="Roli.html">Ugo Roli</a></strong></td>
 <td><big><big><strong><a href="Santi.html">Aldo Santi</a></strong></td>
-</tr>
+<td><big><big><strong><a href="Selmi.html">Francesco Selmi</a></strong></td></tr>
 <tr>
-<td><big><big><strong><a href="Selmi.html">Francesco Selmi</a></strong></td>
 <td><big><big><strong><a href="Soli1.html">Giuseppe Maria Soli</a></strong></td>
 <td><big><big><strong><a href="Soli2.html">Ivo Soli</a></strong></td>
-</tr>
+<td><big><big><strong><a href="Soli3.html">Gian Francesco Soli Muratori</a></strong></td></tr>
 <tr>
-<td><big><big><strong><a href="Soli3.html">Gian Francesco Soli Muratori</a></strong></td>
 <td><big><big><strong><a href="Tassoni.html">Giulio Tassoni</a></strong></td>
 <td><big><big><strong><a href="Tosi.html">Luca Antonio Tosi</a></strong></td>
-</tr>
-</table>
-</center>
- <br><br>
+<td><big><big><strong><a href=""></a></strong></td></tr>
+</table></center>
+ <br><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
