--- a/agosto.html
+++ b/agosto.html
@@ -30,6 +30,9 @@
 <section><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 <h3><big><strong>AGOSTO</strong></big></h3><br><br><br>
+  
+  
+  
 <p><big><strong>9 agosto 1922</strong>: nacque a Vignola <strong>AUGUSTA REDORICI ROFFI</strong>, maestra elementare, studiosa e divulgatrice di storia locale e scienze naturali.<br><br>
 Augusta Redorici Roffi svolse la professione di maestra elementare. Mandò alle stampe diverse pubblicazioni concernenti il paese natale e i suoi dintorni. Contribuì a fondare, allestire, conservare, arricchire e far conoscere il Museo Civico di Vignola, imprescindibile punto di riferimento per lo studio, la ricerca e la valorizzazione del patrimonio geo-paleontologico della zona. Soprattutto a beneficio delle scolaresche, tenne numerosissime visite guidate in vari luoghi significativi delle aree pedemontana e collinare poste tra Modenese e Bolognese.<br>
 Nel 2006 il presidente della Repubblica Italiana la insignì della Benemerenza di Prima Classe per l’Arte, la Scienza e la Cultura.<br> 
@@ -70,6 +73,18 @@ Nelle immagini qui sotto, due fotografie recenti scattate a Bologna, nel Cimiter
 <center><img src="img/celebri vignolesi/Barbanti Brodano/lapide.jpg" width="500" height="650"></center>
 <br><br><br>
   <strong><big><center>Vuoi saperne di più su Giuseppe Barbanti Bròdano?<br>Allora, visita il suo <a href="Barbanti Bròdano.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</center></strong><br><br>
+
+<p class="index-p5"><strong>30 agosto 2009</strong>: morì a Vignola <strong>ATTILIO NERI</strong>, medico pediatra, amministratore pubblico, cultore di storia locale e dei dialetti. Fu sepolto presso il cimitero di quella cittadina, nella cappella funeraria di famiglia.<br><br> 
+
+Attilio Neri nacque a San Secondo Parmense il 7 febbraio 1921. Tre anni dopo, suo padre, <strong>Nèttore Neri</strong> (1883-1970), fu nominato pretore a Vignola e si trasferì in questo paese con tutta la famiglia. Da allora, Attilio Neri visse sempre a Vignola, dove lavorò a lungo come medico pediatra nel locale nosocomio. Presso quel Comune, il nostro personaggio svolse pure incarichi politico-amministrativi (ne fu, fra l’altro, sindaco dal 1951 al 1954) e dirigenziali in campo sportivo (per esempio, venne eletto presidente della squadra di calcio <i>U.S. Vignolese</i> poco prima dell’inizio della stagione 1959/1960). Inoltre, fu un ragguardevole studioso di lessicografia dialettale e di storia vignolese, campi ai quali dedicò diverse pubblicazioni di assoluto rilievo. Infine, si fece conoscere come importante collezionista di fotografie e cartoline; il corposo Fondo fotografico Attilio Neri è di proprietà dal 2002 del Comune di Vignola (la sua custodia fu subito affidata alla Biblioteca Comunale “Francesco Selmi”) e risulta interamente digitalizzato.<br><br> 
+
+Nelle immagini sottostanti, cappella funeraria della famiglia Nèttore Neri e lapide dedicata al nostro personaggio.</p><br>
+<img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="650"><br><br>
+<img src="img/celebri vignolesi/Neri1/lapide.jpg" width="550" height="350"><br><br><br>
+
+<strong><center>Vuoi saperne di più su Attilio Neri?<br>Allora, visita il suo <a href="Neri1.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</center></strong><br><br>
+    
+
 <p class="index-p"><strong><a href="Anniversari.html">Indice dei mesi</a></strong></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
