--- a/Neri1.html
+++ b/Neri1.html
@@ -57,18 +57,19 @@ A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmaci
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Sopraccoperta sulla prima di copertina della prima edizione di <i>Vocabolario del dialetto modenese<br> con voci, frasi, modi di dire, proverbi e repertorio italiano-modenese</i>, Sala Bolognese (BO),<br> Arnaldo Forni Editore, 1973; è qui riprodotto il disegno di Bruno Montorsi <i>Uscita delle tabacchine</i>,<br> Modena, inizi del Novecento (collezione privata). Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.</center></big></big></p>
-<center><img src="img/celebri vignolesi/Neri1/vocabolario.jpg" width="500" height="650"></center><br><br><br>
+<center><img src="img/celebri vignolesi/Neri1/vocabolario.jpg" width="500" height="650"></center><br><br>
 <p><big><big><center>Prima di copertina di <i>Le ruote della nonna ovvero Centro anni di veicoli a Vignola 1874-1974<br> con supplemento araldico</i>, edito a cura della Cassa di Risparmio di Vignola, s.l., s.n.<br> (Modena, Stabilimento Poligrafico STEM-Mucchi), 1974; è qui riprodotta una cartolina<br> che raffigura la piazza di Vignola sul finire dell’Ottocento (collezione di Attilio Neri, ora Fondo fotografico<br> Attilio Neri di proprietà del Comune di Vignola). Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.  </center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/ruote.jpg" width="480" height="630"></center><br><br>
 <p><big><big><center>Sopraccoperta sulla prima di copertina di <i>Uomini donne e cose della vecchia Vignola.<br> Dove il lettore compie senza muoversi un lunghissimo viaggio nel tempo e nello spazio vignolesi</i>,<br> Vignola, Fabbri s.p.a. Editrice, 1979; è qui riprodotto il quadro di Casimiro Jodi <i>Ingresso a Vignola</i>, 1931<br> (Casino Tosi Bellucci, Residenza Municipale di Vignola). Fonte: collezione privata. </center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/uominidonne.jpg" width="480" height="650"></center><br><br>
 <p><big><big><center>Sopraccoperta sulla prima di copertina di <i>Il ponte di Vignola in pace e in guerra con 155 illustrazioni,<br> 2 tavole fuori testo e 6 immagini della guerra a Modena</i>, Vignola, Fabbri Arti Grafiche Editrice, 1984;<br> è qui riprodotto il dipinto di Ivo Soli <i>Il ponte di Vignola nel maggio 1945</i> (collezione privata).<br> Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/ponte.jpg" width="480" height="680"></center><br><br>
-
 <p><big><big><center>Prima di copertina di <i>bianchi e NERI. Scatti d’epoca dalla collezione fotografica di Attilio Neri</i>,<br> Catalogo generale delle fotografie e delle cartoline, pubblicato in occasione della Mostra<br> (Vignola, Cantieri Cantelli, 15 dicembre 2001 - 27 gennaio 2002), s.n.t. (Vignola, Città di Vignola, 2001).<br> Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.</center></big></big></p>
-
 <center><img src="img/celebri vignolesi/Neri1/bianchieneri.jpg" width="480" height="650"></center><br><br>
-
+<p><big><big><center>Cappella funeraria della famiglia Nèttore Neri e lapide dedicata al nostro personaggio.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="650"><br><br>
+<img src="img/celebri vignolesi/Neri1/lapide.jpg" width="550" height="350"></center><br><br><br>
+	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
