--- a/Neri1.html
+++ b/Neri1.html
@@ -64,8 +64,9 @@ A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmaci
 <center><img src="img/celebri vignolesi/Neri1/ponte.jpg" width="480" height="680"></center><br><br>
 <p><big><big><center>Prima di copertina di <i>bianchi e NERI. Scatti d’epoca dalla collezione fotografica di Attilio Neri</i>,<br> Catalogo generale delle fotografie e delle cartoline, pubblicato in occasione della Mostra<br> (Vignola, Cantieri Cantelli, 15 dicembre 2001 - 27 gennaio 2002), s.n.t. (Vignola, Città di Vignola, 2001).<br> Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/bianchieneri.jpg" width="480" height="650"></center><br><br>
-<p><big><big><center>Cappella funeraria della famiglia Nèttore Neri e lapide dedicata al nostro personaggio.</center></big></big></p>
+<p><big><big><center>Cappella funeraria della famiglia Nèttore Neri.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="650"><br><br>
+<p><big><big><center>Lapide dedicata al nostro personaggio ​nella cappella di famiglia.</center></big></big></p>
 <img src="img/celebri vignolesi/Neri1/lapide.jpg" width="550" height="350"></center><br><br><br>
 	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
