--- a/Neri1.html
+++ b/Neri1.html
@@ -54,6 +54,8 @@ Neri morì a Vignola il 30 agosto 2009, lasciando i figli Raffaele, Lavinia, Let
 A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmacia Comunale.</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
+<p><big><big><center>Neri, sindaco di Vignola, in Consiglio Comunale (fotografia dell’inizio degli anni Cinquanta).<br> Fonte: collezione di Attilio Neri, ora Fondo fotografico Attilio Neri di proprietà del Comune di Vignola.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Neri1/attilio.jpg" width="780" height="650"></center><br><br>	
 <p><big><big><center>Sopraccoperta sulla prima di copertina della prima edizione di <i>Vocabolario del dialetto modenese<br> con voci, frasi, modi di dire, proverbi e repertorio italiano-modenese</i>, Sala Bolognese (BO),<br> Arnaldo Forni Editore, 1973; è qui riprodotto il disegno di Bruno Montorsi <i>Uscita delle tabacchine</i>,<br> Modena, inizi del Novecento (collezione privata). Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/vocabolario.jpg" width="500" height="650"></center><br><br>
 <p><big><big><center>Prima di copertina di <i>Le ruote della nonna ovvero Centro anni di veicoli a Vignola 1874-1974<br> con supplemento araldico</i>, edito a cura della Cassa di Risparmio di Vignola, s.l., s.n.<br> (Modena, Stabilimento Poligrafico STEM-Mucchi), 1974; è qui riprodotta una cartolina<br> che raffigura la piazza di Vignola sul finire dell’Ottocento (collezione di Attilio Neri, ora Fondo fotografico<br> Attilio Neri di proprietà del Comune di Vignola). Fonte: Biblioteca Comunale “Francesco Selmi” di Vignola.  </center></big></big></p>
@@ -66,7 +68,7 @@ A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmaci
 <center><img src="img/celebri vignolesi/Neri1/bianchieneri.jpg" width="480" height="650"></center><br><br>
 <p><big><big><center>Cappella funeraria della famiglia Nèttore Neri.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri1/cappella.jpg" width="450" height="650"><br><br>
-<p><big><big><center>Lapide dedicata al nostro personaggio ​nella cappella di famiglia.</center></big></big></p>
+<p><big><big><center>Lapide dedicata al nostro personaggio nella cappella di famiglia.</center></big></big></p>
 <img src="img/celebri vignolesi/Neri1/lapide.jpg" width="550" height="350"></center><br><br><br>
 	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
